--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,8 +29,8 @@ services:
       WEBSITE_EXPIRES: 30d
       KEEP_HISTORY: true # Default is true when STORAGE_BUCKET is provided
       KEEP_RETRIES: false # Default is false
-      WATCH_MODE: true
-      TTL_SECS: 45
+      WATCH_MODE: false
+      TTL_SECS: 4
     volumes:
       - ./worker:/app #dev only. This overrides the /app dir
       - ${PWD}/service-account.json:${PWD}/service-account.json:ro
