--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       context: .
     container_name: allure-deployer
     environment:
-      DEBUG: true # Dev mode
+#      DEBUG: true # Dev mode
       FIREBASE_STORAGE_EMULATOR_HOST: 127.0.0.1:9199 # Dev mode
       GOOGLE_APPLICATION_CREDENTIALS: ${PWD}/service-account.json
       STORAGE_BUCKET: "fir-demo-project.appspot.com"
@@ -29,7 +29,7 @@ services:
       WEBSITE_EXPIRES: 30d
       KEEP_HISTORY: true # Default is true when STORAGE_BUCKET is provided
       KEEP_RETRIES: false # Default is false
-      WATCH_MODE: false
+      WATCH_MODE: true
       TTL_SECS: 4
     volumes:
       - ./worker:/app #dev only. This overrides the /app dir
