--- a/.github/workflows/actions-example.yml
+++ b/.github/workflows/actions-example.yml
@@ -27,6 +27,11 @@ jobs:
       - name: Run Tests
         run: |
           echo 'No test to run, using existing assets/allure-results from this repository'
+
+      - name: Write GCP Credentials
+        run: |
+          echo "${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}" > ${{ github.workspace }}/gcp-key.json
+
       - name: Authenticate Docker Hub
         uses: docker/login-action@v3
         with:
@@ -36,12 +41,12 @@ jobs:
       - name: Deploy Allure Report to Firebase
         uses: docker://sokari/allure-docker-deploy
         with:
-          args:  |
-              -e GOOGLE_APPLICATION_CREDENTIALS=/credentials/gcp-key.json \
-              -e STORAGE_BUCKET=my-test-results-bucket \
-              -e WEBSITE_ID=${{github.event.inputs.website-id}} \
-              -e WEBSITE_EXPIRES=${{github.event.inputs.website-expires}} \
-              -e KEEP_RETRIES=${{github.event.inputs.keep-retries}} \
-              -e KEEP_HISTORY=${{github.event.inputs.keep-history}} \
-              -v ${{ github.workspace }}/assets/allure-results:/allure-results \
-              -v ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}:/credentials/gcp-key.json \
+          args: >
+            -e GOOGLE_APPLICATION_CREDENTIALS=/credentials/gcp-key.json
+            -e STORAGE_BUCKET=my-test-results-bucket
+            -e WEBSITE_ID=${{ github.event.inputs.website-id }}
+            -e WEBSITE_EXPIRES=${{ github.event.inputs.website-expires }}
+            -e KEEP_RETRIES=${{ github.event.inputs.keep-retries }}
+            -e KEEP_HISTORY=${{ github.event.inputs.keep-history }}
+            -v ${{ github.workspace }}/assets/allure-results:/allure-results
+            -v ${{ github.workspace }}/gcp-key.json:/credentials/gcp-key.json
