--- a/.github/workflows/actions-example.yml
+++ b/.github/workflows/actions-example.yml
@@ -47,8 +47,8 @@ jobs:
         run: |
           docker run --rm \
           -e GOOGLE_APPLICATION_CREDENTIALS=/credentials/gcp-key.json \
-          -e STORAGE_BUCKET=my-test-results-bucket \
-          -e WEBSITE_ID=${{ github.event.inputs.website-id }} \
+          -e STORAGE_BUCKET=${{github.event.inputs.storage-bucket}} \
+          -e WEBSITE_ID=${{ github.event.inputs.website-id }}-1 \
           -e WEBSITE_EXPIRES=${{ github.event.inputs.website-expires }} \
           -e KEEP_RETRIES=${{ github.event.inputs.keep-retries }} \
           -e KEEP_HISTORY=${{ github.event.inputs.keep-history }} \
