--- a/.github/workflows/actions-example.yml
+++ b/.github/workflows/actions-example.yml
@@ -1,4 +1,4 @@
-name: Github Actions usecase
+name: Github Actions use case
 on:
   workflow_dispatch:
     inputs:
@@ -43,7 +43,7 @@ jobs:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Debug Container
+      - name: Deploy Allure Report to Firebase
         run: |
           docker run --rm \
           -e GOOGLE_APPLICATION_CREDENTIALS=/credentials/gcp-key.json \
@@ -52,19 +52,7 @@ jobs:
           -e WEBSITE_EXPIRES=${{ github.event.inputs.website-expires }} \
           -e KEEP_RETRIES=${{ github.event.inputs.keep-retries }} \
           -e KEEP_HISTORY=${{ github.event.inputs.keep-history }} \
+          -e GITHUB=true \
           -v ${{ github.workspace }}/assets/allure-results:/allure-results \
           -v ${{ github.workspace }}/gcp-key.json:/credentials/gcp-key.json \
           sokari/allure-docker-deploy:latest
-
-      - name: Deploy Allure Report to Firebase
-        uses: docker://sokari/allure-docker-deploy:latest
-        with:
-          args: >
-            -e GOOGLE_APPLICATION_CREDENTIALS=/credentials/gcp-key.json
-            -e STORAGE_BUCKET=${{github.event.inputs.storage-bucket}}
-            -e WEBSITE_ID=${{ github.event.inputs.website-id }}
-            -e WEBSITE_EXPIRES=${{ github.event.inputs.website-expires }}
-            -e KEEP_RETRIES=${{ github.event.inputs.keep-retries }}
-            -e KEEP_HISTORY=${{ github.event.inputs.keep-history }}
-            -v ${{ github.workspace }}/assets/allure-results:/allure-results
-            -v ${{ github.workspace }}/gcp-key.json:/credentials/gcp-key.json
