--- a/worker/package.json
+++ b/worker/package.json
@@ -21,8 +21,8 @@
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
-    "typescript": "^4.9.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
