--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,11 +28,11 @@ services:
       WEBSITE_ID: 'fir-demo-project'
       WEBSITE_EXPIRES: 12h
       KEEP_HISTORY: true # Default is true when STORAGE_BUCKET is provided
-      KEEP_RETRIES: false # Default is false
-      WATCH_MODE: true
+      KEEP_RETRIES: true # Default is false
+#      WATCH_MODE: true
       TTL_SECS: 4
     volumes:
-#      - ./worker:/app #devs only. This overrides the /app dir
+      - ./worker:/app #devs only. This overrides the /app dir
       - ${PWD}/gcp-key.json:${PWD}/service-account.json:ro
       - /Users/sokari/IdeaProjects/appium/reports/ios/allure-results:/allure-results
     cpus: 1
