--- a/worker/package.json
+++ b/worker/package.json
@@ -12,8 +12,10 @@
   "main": "lib/index.js",
   "dependencies": {
     "allure-commandline": "^2.32.0",
+    "async-mutex": "^0.5.0",
     "chokidar": "^4.0.1",
-    "firebase-admin": "^13.0.1"
+    "firebase-admin": "^13.0.1",
+    "p-limit": "^6.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.17.0",
