--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,8 @@ services:
     image: goatlab/firebase-emulator:1.2-arm64
     container_name: emulator
     ports:
-      - "9199:9199" # Storage
-      - "4001:3000" # UI
-      - "4000:4000" # UI
+      - "9199:9199"
+      - "4000:4000"
     command: ["firebase", "emulators:start", "--only", "storage,logging", "--project", "fir-demo-project", '--config', "./startfirebase.json"]
     restart: unless-stopped
     healthcheck:
@@ -20,8 +19,8 @@ services:
       dockerfile: Dockerfile
       context: .
     container_name: allure-deployer
+    env_file: .env.slack
     environment:
-      DEBUG: true # Dev mode
       FIREBASE_STORAGE_EMULATOR_HOST: 127.0.0.1:9199 # Dev mode
       GOOGLE_APPLICATION_CREDENTIALS: ${PWD}/service-account.json
       STORAGE_BUCKET: "fir-demo-project.appspot.com"
@@ -32,7 +31,7 @@ services:
 #      WATCH_MODE: true
       TTL_SECS: 4
     volumes:
-      - ./worker:/app #devs only. This overrides the /app dir
+      - ./worker:/app #Devs only. This overrides the /app dir
       - ${PWD}/gcp-key.json:${PWD}/service-account.json:ro
       - /Users/sokari/IdeaProjects/appium/reports/ios/allure-results:/allure-results
     cpus: 1
