--- a/worker/package.json
+++ b/worker/package.json
@@ -4,13 +4,15 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "test": "tsc && cucumber-js"
   },
   "engines": {
     "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
     "async-mutex": "^0.5.0",
     "chokidar": "^4.0.1",
@@ -18,11 +20,13 @@
     "p-limit": "^6.1.0"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^11.1.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
+    "testcontainers": "^10.16.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.0"
   },
