--- a/worker/package.json
+++ b/worker/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
+    "ansi-escapes": "^7.0.0",
     "async-mutex": "^0.5.0",
+    "chalk": "^5.3.0",
     "chokidar": "^4.0.1",
     "firebase-admin": "^13.0.1",
     "p-limit": "^6.1.0"
