--- a/.github/workflows/actions-example.yml
+++ b/.github/workflows/actions-example.yml
@@ -55,5 +55,5 @@ jobs:
           -e SLACK_CHANNEL_ID=${{secrets.SLACK_CHANNEL_ID}} \
           -v $GITHUB_STEP_SUMMARY:/github/summary.txt \
           -v ${{ github.workspace }}/assets/allure-results:/allure-results \
-          -v ${{ github.workspace }}/gcp-key.json:/credentials/gcp-key.json \
+          -v ${{ github.workspace }}/gcp-key.json:/credentials/key.json \
           sokari/allure-docker-deploy:latest
