--- a/.github/workflows/actions-example.yml
+++ b/.github/workflows/actions-example.yml
@@ -56,4 +56,4 @@ jobs:
           -v $GITHUB_STEP_SUMMARY:/github/summary.txt \
           -v ${{ github.workspace }}/assets/allure-results:/allure-results \
           -v ${{ github.workspace }}/gcp-key.json:/credentials/key.json \
-          sokari/allure-docker-deploy:latest
+          sokari/allure-deployer:latest
