--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,5 +31,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            sokari/allure-docker-deploy:latest
-            sokari/allure-docker-deploy:${{ github.sha }}
+            sokari/allure-deployer:latest
+            sokari/allure-deployer:${{ github.sha }}
