--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,5 +1,6 @@
 name: Build & deploy
 on:
+  workflow_dispatch:
   push:
     tags:
       ["v*.**"]
@@ -9,7 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.5
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd ./worker
-          npm install && npm run build
+          npm install --omit=dev && npm run build
           
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
