--- a/worker/package.json
+++ b/worker/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "tsc --project test.tsconfig.json && npx cucumber-js"
+    "test": "npx cucumber-js"
   },
   "engines": {
     "node": "22"
@@ -23,12 +23,15 @@
   },
   "devDependencies": {
     "@cucumber/cucumber": "^11.1.0",
+    "@types/chai": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "chai": "^5.1.2",
     "eslint": "^9.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
     "testcontainers": "^10.16.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
   },
   "private": true
