--- a/worker/package.json
+++ b/worker/package.json
@@ -5,7 +5,7 @@
     "lint": "eslint --ext .js,.ts .",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "npx cucumber-js"
+    "test": "tsc && jest"
   },
   "engines": {
     "node": "22"
@@ -15,24 +15,38 @@
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
     "ansi-escapes": "^7.0.0",
+    "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
-    "chokidar": "^4.0.1",
     "firebase-admin": "^13.0.1",
-    "p-limit": "^6.1.0"
+    "p-limit": "^6.1.0",
+    "unzipper": "^0.12.3"
   },
   "devDependencies": {
-    "@cucumber/cucumber": "^11.1.0",
+    "@types/archiver": "^6.0.3",
     "@types/chai": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/unzipper": "^0.10.10",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "chai": "^5.1.2",
     "eslint": "^9.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
-    "testcontainers": "^10.16.0",
+    "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
   },
-  "private": true
+  "overrides": {
+    "whatwg-url": "^14.0.0"
+  },
+  "private": true,
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.js?(x)",
+      "**/test/**/*.js?(x)",
+      "**/lib/test/**/*.js?(x)",
+      "**/?(*.)(spec|test).js?(x)"
+    ]
+  }
 }
