--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,8 @@ services:
       WEBSITE_EXPIRES: 12h
       KEEP_HISTORY: true # Default is true when STORAGE_BUCKET is provided
       KEEP_RESULTS: true # Default is false
+      SHOW_HISTORY: true
+      SHOW_RETRIES: true
     volumes:
 #      - ./worker:/app #Dev only. This overrides the /app dir
       - /Users/sokari/IdeaProjects/appium/service-account-sokari.json:/credentials/key.json:ro
