--- a/worker/package.json
+++ b/worker/package.json
@@ -34,19 +34,12 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
   },
   "overrides": {
     "whatwg-url": "^14.0.0"
   },
-  "private": true,
-  "jest": {
-    "testMatch": [
-      "**/__tests__/**/*.js?(x)",
-      "**/test/**/*.js?(x)",
-      "**/lib/test/**/*.js?(x)",
-      "**/?(*.)(spec|test).js?(x)"
-    ]
-  }
+  "private": true
 }
