--- a/worker/package.json
+++ b/worker/package.json
@@ -26,6 +26,7 @@
     "@types/archiver": "^6.0.3",
     "@types/chai": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/mock-fs": "^4.13.4",
     "@types/unzipper": "^0.10.10",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
@@ -34,6 +35,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
+    "mock-fs": "^5.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
