--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd ./worker
-          npm install && tsc
+          npm install && npm run build
           npm install --omit=dev
 
       - name: Build and push
