--- a/worker/package.json
+++ b/worker/package.json
@@ -3,22 +3,23 @@
   "description": "Generate and deploy Allure test reports to Firebase hosting",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "build:watch": "tsc --watch",
-    "test": "tsc && jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "engines": {
     "node": "22"
   },
-  "main": "lib/index.js",
+  "type": "module",
+  "exports": "./lib/index.js",
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
     "ansi-escapes": "^7.0.0",
     "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
-    "firebase-admin": "^13.0.1",
     "p-limit": "^6.1.0",
     "unzipper": "^0.12.3"
   },
@@ -35,6 +36,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "mock-fs": "^5.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
