--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0"
+    "@actions/github": "^6.0.0",
+    "@allure/shared": "1.0.0"
   }
 }
