--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -8,15 +8,13 @@
     "build:watch": "tsc --watch",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
-  "engines": {
-    "node": "22"
-  },
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": "./dist/index.js"
   },
+  "files": ["dist/"],
   "dependencies": {
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
