--- a/packages/action/action.yaml
+++ b/packages/action/action.yaml
@@ -2,8 +2,19 @@ name: 'Allure Deployer Action'
 description: 'Deploy Allure Reports as a website, with unique Ephemeral URLs per report and notification to Slack, No server required'
 author: 'Sokari Gillis-Harry'
 runs:
-  using: 'node20'
-  main: 'dist/index.js'
+  using: 'docker'
+#  image: 'act-packages-action-dockeraction:latest'
+  image: 'sokari/allure-deployer-action:latest'
+  args:
+    - storage_bucket=${{ inputs.storage_bucket }}
+    - website_id=${{ inputs.website_id }}
+    - website_expires=${{ inputs.website_expires }}
+    - keep_history=${{ inputs.keep_history }}
+    - keep_results=${{ inputs.keep_results }}
+    - slack_channel_id=${{ inputs.slack_channel_id }}
+    - allure_results_path=${{ inputs.allure_results_path }}
+    - show_retries=${{ inputs.show_retries }}
+    - show_history=${{ inputs.show_history }}
 
 inputs:
   storage_bucket:
@@ -21,15 +32,9 @@ inputs:
   keep_results:
     description: 'Save Report retries (result files) to storage (true/false)'
     default: 'true'
-  slack_token:
-    description: 'Slack token for notifications (optional)'
-    required: false
   slack_channel_id:
     description: 'Slack channel ID for notifications (optional)'
     required: false
-  firebase_credentials:
-    description: 'Firebase (Google Cloud) credentials JSON'
-    required: true
   allure_results_path:
     description: 'Path to the directory containing Allure results'
     required: true
@@ -41,6 +46,6 @@ inputs:
     description: 'Show history in the test report (true/false)'
     default: 'true'
 
-  outputs:
-    report_url:
-      description: 'URL to your report if enabled'
+outputs:
+  report_url:
+    description: 'URL to your report if enabled'
