--- a/.github/workflows/deploy-docker-action.yaml
+++ b/.github/workflows/deploy-docker-action.yaml
@@ -29,6 +29,7 @@ jobs:
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
+          file: action.Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
