--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -66,6 +66,7 @@ jobs:
     if: ${{ github.event.inputs.job == 'test-action' }}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
         uses: cybersokari/allure-deployer-action@v1.0.1
         env:
