--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -80,3 +80,22 @@ jobs:
           slack_channel_id: ${{secrets.SLACK_CHANNEL_ID}}
           keep_history: ${{github.event.inputs.keep-history}}
           keep_results: ${{github.event.inputs.keep-results}}
+
+  test-action-local:
+    if: ${{ github.event.inputs.job == 'test-action-local' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4.1.5
+      - name: Allure Deployer Action
+        uses: ./packages/action
+        env:
+          SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
+          GOOGLE_CREDENTIALS_JSON: ${{ secrets.GCP_CREDENTIALS}}
+        with:
+          allure_results_path: 'assets/allure-results'
+          storage_bucket: ${{github.event.inputs.storage-bucket}}
+          website_id: ${{ github.event.inputs.website-id }}
+          website_expires: ${{github.event.inputs.website-expires}}
+          slack_channel_id: ${{secrets.SLACK_CHANNEL_ID}}
+          keep_history: ${{github.event.inputs.keep-history}}
+          keep_results: ${{github.event.inputs.keep-results}}
