--- a/.github/workflows/deploy-docker-action.yaml
+++ b/.github/workflows/deploy-docker-action.yaml
@@ -22,6 +22,7 @@ jobs:
           npm install --workspace=@allure/shared
           npm install --workspace=@allure/action
           npm run build --workspaces
+          npm run test --workspaces
           npm install --workspace=@allure/shared --omit-dev
           npm install --workspace=@allure/action --omit-dev
 
