--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "",
     "build": "rm -rf ./dist && tsc"
   },
   "type": "module",
