--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,9 +4,10 @@
   "description": "Shared Module | Allure Deployer",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "rm -rf ./dist && tsc -p tsconfig.build.json",
+    "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "build:watch": "tsc --watch",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage"
   },
   "type": "module",
   "main": "dist/index.js",
@@ -14,15 +15,17 @@
   "exports": {
     ".": "./dist/index.js"
   },
-  "files": ["dist/"],
+  "files": [
+    "dist/"
+  ],
   "dependencies": {
+    "@google-cloud/storage": "^7.14.0",
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
     "ansi-escapes": "^7.0.0",
     "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
-    "@google-cloud/storage": "^7.14.0",
     "p-limit": "^6.1.0",
     "unzipper": "^0.12.3"
   },
@@ -40,6 +43,7 @@
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jszip": "^3.10.1",
     "mock-fs": "^5.4.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
