--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "rootDirs": ["./src", "./test"],
+    "rootDir": "./src",
     "outDir": "./dist"
   },
-  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["./test","jest.config.ts"]
 }
