--- a/.github/workflows/deploy-docker.yaml
+++ b/.github/workflows/deploy-docker.yaml
@@ -73,6 +73,7 @@ jobs:
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
+          file: Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
