--- a/packages/docker/tsconfig.json
+++ b/packages/docker/tsconfig.json
@@ -5,5 +5,5 @@
     "outDir": "./dist",
   },
   "include": ["src/**/*"],
-  "exclude": ["docker-compose.yaml","Dockerfile", "start.sh", "node_modules"]
+  "exclude": ["start.sh", "node_modules"]
 }
