--- a/.github/workflows/deploy-docker.yaml
+++ b/.github/workflows/deploy-docker.yaml
@@ -28,54 +28,30 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-      - name: Install dependencies
+
+      - name: Install deps
         run: |
           npm install --workspace=@allure/shared
           npm install --workspace=@allure/docker
-          npm run build --workspaces
-          npm run test --workspaces
-          npm install --workspace=@allure/shared --omit-dev
-          npm install --workspace=@allure/docker --omit-dev
 
-      - name: Build and push
-        uses: docker/build-push-action@v6.10.0
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: |
-            sokari/allure-deployer:latest
-            sokari/allure-deployer:${{ github.sha }}
+      - name: Run test
+        run: npm run test --workspaces
 
-  deploy-docker-action:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4.1.5
-      - name: Docker login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ vars.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Compile JS
+        run: npm run build --workspaces
 
-      - name: Set up Nodejs
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-      - name: Install dependencies
+      - name: Remove dev deps
         run: |
-          npm install --workspace=@allure/shared
-          npm install --workspace=@allure/action
-          npm run build --workspaces
-          npm install --workspace=@allure/shared --omit-dev
-          npm install --workspace=@allure/action --omit-dev
+          npm install --workspace=@allure/shared --omit=dev
+          npm install --workspace=@allure/docker --omit=dev
 
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
         with:
           context: .
           file: Dockerfile
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
-            sokari/allure-deployer-action:latest
-            sokari/allure-deployer-action:${{ github.sha }}
+            sokari/allure-deployer:latest
+            sokari/allure-deployer:${{ github.sha }}
