--- a/.github/workflows/deploy-docker.yaml
+++ b/.github/workflows/deploy-docker.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Install deps
         run: |
-          npm install --workspace=@allure/shared
+          npm install --workspace=allure-deployer-shared
           npm install --workspace=@allure/docker
 
       - name: Run test
@@ -42,7 +42,7 @@ jobs:
 
       - name: Remove dev deps
         run: |
-          npm install --workspace=@allure/shared --omit=dev
+          npm install --workspace=allure-deployer-shared --omit=dev
           npm install --workspace=@allure/docker --omit=dev
 
       - name: Build and push
