--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
     container_name: allure-deployer
 #    env_file: .env.slack
     environment:
-      FIREBASE_STORAGE_EMULATOR_HOST: 127.0.0.1:9199 # Dev mode
+#      FIREBASE_STORAGE_EMULATOR_HOST: 127.0.0.1:9199 # Dev mode
       STORAGE_BUCKET: "gatedaccessdev.appspot.com"
 #      PREFIX: 'project-999'
       WEBSITE_ID: 'fir-demo-project'
