--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,16 +1,43 @@
 {
-  "name": "@allure/cli",
+  "name": "allure-deployer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Deploy your Allure Reports to Firebase, and notify in Slack, No server required",
+  "keywords": [
+    "allure",
+    "allure reports",
+    "testing",
+    "allure results",
+    "allure cli"
+  ],
+  "author": "Sokari Gillis-Harry",
+  "license": "MIT",
   "main": "./dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cybersokari/allure-report-deployer",
+    "directory": "packages/cli"
+  },
+  "bugs": {
+    "url": "https://github.com/cybersokari/allure-report-deployer/issues"
+  },
   "scripts": {
     "test": "",
-    "build": "rm -rf ./dist && tsc"
+    "build": "rm -rf ./dist && tsc",
+    "prepublishOnly": "npm run build"
   },
   "type": "module",
-  "private": true,
   "dependencies": {
+    "allure-deployer-shared": "~1.0.0",
+    "chalk": "^5.4.0",
+    "commander": "^12.1.0",
+    "conf": "^13.1.0",
     "firebase-tools": "^13.29.1",
-    "@allure/shared": "1.0.0"
+    "inquirer": "^12.2.0"
+  },
+  "devDependencies": {
+    "@types/conf": "^2.1.0"
+  },
+  "bin": {
+    "allure-deployer": "./dist/index.js"
   }
 }
