--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "@allure/shared",
+  "name": "allure-deployer-shared",
   "version": "1.0.0",
-  "description": "Shared Module | Allure Deployer",
+  "description": "Allure Deployer CLI companion module ",
+  "author": "Sokari Gillis-Harry",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cybersokari/allure-report-deployer",
+    "directory": "packages/shared"
+  },
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
@@ -38,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "chai": "^5.1.2",
+    "esbuild": "^0.24.1",
     "eslint": "^9.16.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.31.0",
@@ -48,6 +56,5 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
-  },
-  "private": true
+  }
 }
