feat: cli v1.0.1 with ora loading animation

--- a/packages/action/package.json
+++ b/packages/action/package.json
@@ -10,9 +10,6 @@
   "type": "module",
   "private": true,
   "dependencies": {
-    "allure-deployer-shared": "1.0.0"
-  },
-  "devDependencies": {
-    "esbuild": "^0.24.1"
+    "allure-deployer-shared": "~1.0.0"
   }
 }
