--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "packages/cli"
   ],
   "scripts": {
-    "build": "yarn workspaces run build"
+    "build": "npm run build --workspaces"
   },
   "overrides": {
     "whatwg-url": "^14.0.0"
