--- a/.github/workflows/deploy-cli.yaml
+++ b/.github/workflows/deploy-cli.yaml
@@ -1,28 +1,53 @@
 name: Build CLI
 on:
   workflow_dispatch:
-
 jobs:
-  deploy-npm:
+  deploy-cli:
     runs-on: ubuntu_latest
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Setup Node.js
       - uses: actions/setup-node@v4
         with:
-          node-version: '16' # Use the Node.js version you want
-          registry-url: 'https://registry.npmjs.org/'
+          node-version: '20'
 
-      - name: Authenticate with npm
-        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - name: Install deps
+        run: |
+          npm install --workspace=allure-deployer-shared
+          npm install --workspace=@allure/cli
 
-      - name: Install dependencies
-        run: npm install
+      - name: Run test
+        run: npm run test --workspaces
 
-      - name: Run tests
-        run: npm test
+      - name: Compile JS
+        run: npm run build --workspaces
 
-      - name: Publish package
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: NPM Publish
+        uses: JS-DevTools/npm-publish@v3.1.1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/cli
+
+  deploy-shared:
+    runs-on: ubuntu_latest
+    steps:
+      - uses: actions/checkout@v4.1.5
+      - name: Setup Node.js
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install deps
+        run: |
+          npm install --workspace=allure-deployer-shared
+      - name: Run test
+        run: npm run test --workspaces
+
+      - name: Compile JS
+        run: npm run build --workspaces
+
+      - name: NPM Publish
+        uses: JS-DevTools/npm-publish@v3.1.1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: packages/shared
