--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "allure-deployer-shared",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Allure Deployer CLI companion module ",
   "author": "Sokari Gillis-Harry",
   "license": "MIT",
@@ -34,7 +34,8 @@
     "async-mutex": "^0.5.0",
     "chalk": "^5.3.0",
     "p-limit": "^6.1.0",
-    "unzipper": "^0.12.3"
+    "unzipper": "^0.12.3",
+    "firebase-tools": "^13.29.1"
   },
   "devDependencies": {
     "@types/archiver": "^6.0.3",
